--- a/references.bib
+++ b/references.bib
@@ -399,13 +399,6 @@
   publisher={John Wiley \& Sons}
 }
 
-@article{stringer2021fast,
-  title={Fast, Scalable Approximations to Posterior Distributions in Extended Latent Gaussian Models},
-  author={Stringer, Alex and Brown, Patrick and Stafford, Jamie},
-  journal={arXiv preprint arXiv:2103.07425},
-  year={2021}
-}
-
 @article{eaton2021naomi,
   title={Naomi: A New Modelling Tool for Estimating HIV Epidemic Indicators at the District Level in Sub-Saharan Africa },
   author={Eaton, Jeffrey W and Dwyer-Lindgren, Laura and Gutreuter, Steve and O’Driscoll, Megan and Stevens, Oliver and Bajaj, Sumali and Ashton, Rob and Hill, Alex and Russell, Emma and Esra, Rachel and Dolan, Nicolas and Anifowoshe, Yusuf L and Fellows, Ian and Glaubius, Rob and Haeuser, Emily and Okonek, Taylor and Stover, John and Thomas, Matthew L and Wakefield, Jon and Wolock, Tim and Berry11, Jonathan and Sabala, Tomasz and Heard, Nate and Delgado, Stephen and Pantazis, Athena and Jahn, Andreas and Kalua, Thoko and Chimpandule, Tiwonge and Auld, Andrew and Kim, Evelyn and Payne, Danielle and Johnson, Leigh F and Fitzjohn, Rich and Wankyeki, Ian and Mahy, Mary and Shiraishi, Ray},
@@ -1623,3 +1616,84 @@ doi = {10.1201/9781420072884-c30}
   publisher={CRC Press}
 }
 
+@article{amoah2020geostatistical,
+  title={A geostatistical framework for combining spatially referenced disease prevalence data from multiple diagnostics},
+  author={Amoah, Benjamin and Diggle, Peter J and Giorgi, Emanuele},
+  journal={Biometrics},
+  volume={76},
+  number={1},
+  pages={158--170},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@Manual{bridgestan,
+  title = {bridgestan: BridgeStan, Accessing Stan Model Functions in R},
+  author = {Brian Ward},
+  year = {2023},
+  note = {R package version 1.0.1},
+}
+
+@article{de2017programming,
+  title={Programming with models: writing statistical algorithms for general model structures with NIMBLE},
+  author={de Valpine, Perry and Turek, Daniel and Paciorek, Christopher J and Anderson-Bergman, Clifford and Lang, Duncan Temple and Bodik, Rastislav},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={26},
+  number={2},
+  pages={403--413},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
+@article{geman1984stochastic,
+  title={Stochastic relaxation, Gibbs distributions, and the Bayesian restoration of images},
+  author={Geman, Stuart and Geman, Donald},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  number={6},
+  pages={721--741},
+  year={1984},
+  publisher={IEEE}
+}
+
+@article{margossian2020hamiltonian,
+  title={Hamiltonian Monte Carlo using an adjoint-differentiated Laplace approximation: Bayesian inference for latent Gaussian models and beyond},
+  author={Margossian, Charles and Vehtari, Aki and Simpson, Daniel and Agrawal, Raj},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={9086--9097},
+  year={2020}
+}
+
+@article{nandi2020disaggregation,
+  title={Disaggregation: an R package for Bayesian spatial disaggregation modelling},
+  author={Nandi, Anita K and Lucas, Tim CD and Arambepola, Rohan and Gething, Peter and Weiss, Daniel J},
+  journal={arXiv preprint arXiv:2001.04847},
+  year={2020}
+}
+
+@article{neal2003slice,
+  title={Slice sampling},
+  author={Neal, Radford M},
+  journal={The Annals of Statistics},
+  volume={31},
+  number={3},
+  pages={705--767},
+  year={2003},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{shapley1953value,
+  title={A value for n-person games},
+  author={Shapley, Lloyd S and others},
+  year={1953},
+  publisher={Princeton University Press Princeton}
+}
+
+@article{stringer2022fast,
+  title={Fast, scalable approximations to posterior distributions in extended latent Gaussian models},
+  author={Stringer, Alex and Brown, Patrick and Stafford, Jamie},
+  journal={Journal of Computational and Graphical Statistics},
+  pages={1--15},
+  year={2022},
+  publisher={Taylor \& Francis}
+}
